--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-import "./style.css"
 <!doctype html>
 <html lang="en-US">
   <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="mystyle.css">
     <title>My test page</title>
   </head>
   <body>
