--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <title>CSS BOX MODEL</title>
 <link rel="stylesheet" href="style.css">
 <meta charset="utf-8">
-<!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
