--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ footer {
   </header>
 
   <section>
-    <nav style="background-color: green;">
+    <nav>
       <ul>
         <li><a href="#">London</a></li>
         <li><a href="#">Paris</a></li>
