--- a/index.html
+++ b/index.html
@@ -31,7 +31,12 @@
   </section>
 
   <footer>
-    <p>Footer</p>
+    <footer-left>
+      <p>Left Footer</p>
+    </footer-left>
+    <footer-right>
+      <p>Right Footer</p>
+    </footer-right>  
   </footer>
 
 </body>
