--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
   </section>
 
   <footer>
-    <footer-left>
+    <div class="footer_left">
       <p>Left Footer</p>
-    </footer-left>
-    <footer-right>
+    </div>
+    <div class="footer_right">
       <p>Right Footer</p>
-    </footer-right>  
+    </div>  
   </footer>
 
 </body>
