--- a/index.html
+++ b/index.html
@@ -35,10 +35,13 @@
       <p>Left Footer</p>
     </div>
     <div class="footer_right">
-      <p>Right Footer</p>
+      <!-- <p>Right Footer</p> -->
+      <ion-icon name="logo-facebook"></ion-icon>
     </div>  
   </footer>
 
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
 
