adding and styling social media icons

--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
     </div>
     <div class="footer_right">
       <!-- <p>Right Footer</p> -->
-      <ion-icon name="logo-facebook"></ion-icon>
+      <ion-icon class="sm_style" name="logo-facebook"></ion-icon>
+      <ion-icon class="sm_style"name="logo-twitter"></ion-icon>
+      <ion-icon class="sm_style"name="logo-youtube"></ion-icon>
+      <ion-icon class="sm_style"name="logo-instagram"></ion-icon>
     </div>  
   </footer>
 
