font awsome icons attached

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en-US">
   <head>
       <title>CSS BOX MODEL</title>
-      <link rel="stylesheet" href="style.css">
+      <link rel="stylesheet" href="style.css"/>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
-
+      <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
   </head>
 
   <body>
@@ -32,7 +32,8 @@
 
   <footer>
     <div class="footer_left">
-      <p>Left Footer</p>
+      <!-- <p>Left Footer</p> -->
+      <i class="fa-brands fa-facebook"></i>
     </div>
     <div class="footer_right">
       <!-- <p>Right Footer</p> -->
