some more sm iconds added

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <div class="footer_right">
       <!-- <p>Right Footer</p> -->
             <i class="fa-brands fa-facebook"></i>
+            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-github"></i>
+            <i class="fa-brands fa-instagram"></i>
     </div>  
   </footer>
 </body>
